<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
  <string name="add_player_add">Add</string>
  <string name="add_player_cancel">Cancel</string>
  <string name="add_player_hint_name">Name</string>
  <string name="add_player_hint_password">Password</string>
  <string name="add_player_name_error">Name cannot be blank</string>
  <string name="add_player_password_error">Must be a zodiac animal</string>
  <string name="add_player_title">Add Player</string>
  <string name="app_name">Badminton Scheduler</string>
  <string name="court_actions_cancel">Cancel</string>
  <string name="court_actions_message">What would you like to do?</string>
  <string name="court_actions_remove">Remove First Group</string>
  <string name="court_actions_reset">Reset Court</string>
  <string name="court_actions_title">Court %1$s</string>
  <string name="court_item_gaps">%1$s (with gaps)</string>
  <string name="court_item_in_progress">%1$s minutes | %2$s</string>
  <string name="court_item_number">Court %1$s</string>
  <string name="court_item_not_started">At %1$s for %2$s minutes</string>
  <string name="courts_empty">No courts yet.</string>
  <string name="courts_title">Courts</string>
  <string name="drawer_closed">Drawer Closed</string>
  <string name="end_session_cancel">Cancel</string>
  <string name="end_session_end">End Session</string>
  <string name="end_session_message">End session and delete all court and player data?</string>
  <string name="end_session_title">End Session</string>
  <string name="drawer_item_content_description">View Icon</string>
  <string name="drawer_open">Drawer Open</string>
  <string name="player_court_header">Court</string>
  <string name="player_name_header">Player Name</string>
  <string name="player_password_header">Password</string>
  <string name="players_empty">No players here.</string>
  <string name="players_title">Players</string>
  <string name="remove_player_cancel">Cancel</string>
  <string name="remove_player_confirm">Remove</string>
  <string name="remove_player_message">Remove player %1$s?</string>
  <string name="remove_player_title">Remove Player</string>
  <string name="reservation_court_number">Court #</string>
  <string name="reservation_court_number_error">Court Number cannot be blank</string>
  <string name="reservation_court_number_hint">000</string>
  <string name="reservation_delay_time">Delay (min)</string>
  <string name="reservation_players_empty">No available players!</string>
  <string name="reservation_players_error">You must select at least one player.</string>
  <string name="reservation_register">Register</string>
  <string name="reservation_randoms">Random Players</string>
  <string name="reservation_starts_at">at %1$s</string>
  <string name="reservation_time_remaining">%1$s minutes remaining</string>
  <string name="version_name">Version %1$s</string>


  <string-array name="zodiac_animals">
    <item>cat</item>
    <item>dog</item>
    <item>dragon</item>
    <item>goat</item>
    <item>horse</item>
    <item>monkey</item>
    <item>mouse</item>
    <item>ox</item>
    <item>pig</item>
    <item>rabbit</item>
    <item>rooster</item>
    <item>snake</item>
    <item>tiger</item>
    <item>low</item>
    <item>bee</item>
  </string-array>
</resources>
