<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:attr/colorBackground"
      android:elevation="@dimen/global_elevation"
      android:padding="@dimen/global_padding"
      >
    <TextView
        android:id="@+id/tv_reservation_court_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_reservation_court_number"
        android:text="@string/reservation_court_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />
    <EditText
        android:id="@+id/et_reservation_court_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:hint="@string/reservation_court_number_hint"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/global_padding_half"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="25"
        />
    <TextView
        android:id="@+id/tv_reservation_delay_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/et_reservation_delay_time"
        android:layout_alignStart="@id/tv_reservation_court_number_title"
        android:text="@string/reservation_delay_time"
        />
    <EditText
        android:id="@+id/et_reservation_delay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/et_reservation_court_number"
        android:layout_below="@id/et_reservation_court_number"
        android:gravity="end"
        android:hint="@string/reservation_court_number_hint"
        android:inputType="number"
        android:maxLength="3"
        android:padding="@dimen/global_padding_half"
        />
  </RelativeLayout>
  <ViewAnimator
      android:id="@+id/va_reservation_players_animator"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >
    <ProgressBar
        android:id="@+id/pb_reservation_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_reservation_players_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <LinearLayout
        android:id="@+id/ll_reservation_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/icon_shuttle"
          />
      <TextView
          android:layout_width="@dimen/empty_state_width"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/global_padding"
          android:gravity="center"
          android:text="@string/reservation_players_empty"
          />
    </LinearLayout>
  </ViewAnimator>
  <Button
      android:id="@+id/b_reservation_submit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/reservation_register"
      android:textAllCaps="false"
      />
</LinearLayout>